<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="100sp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/etFName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:hint="@string/first_name_hint"
        android:textSize="14sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etLName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/last_name_hint"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/etFName"/>

    <EditText
        android:id="@+id/etStreet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/street_hint"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/etLName"/>
    <EditText
        android:id="@+id/etCity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/city_hint"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/etStreet"/>
    <EditText
        android:id="@+id/etState"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/state_hint"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/etCity"/>
    <EditText
        android:id="@+id/etZip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/zip_hint"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/etState"/>

    <Button
        android:id="@+id/btSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_info"
        app:layout_constraintTop_toBottomOf="@+id/etZip"
        android:onClick="onClick"/>

</android.support.constraint.ConstraintLayout>



